public class Anim
{
    public const string ATTACK = "attack";
    public const string ATTACK_2 = "attack2";
    public const string ATTACK_3 = "attack3";
    public const string ATTACK_4 = "attack4";
    public const string ULTI = "ulti";

    public const string IDLE = "idle";
    public const string DIE = "die";
    public const string RUN = "run";
    public const string DANCE = "dance";

}